--- a/BusHawk/app/src/main/res/layout-v17/activity_main.xml
+++ b/BusHawk/app/src/main/res/layout-v17/activity_main.xml
@@ -66,6 +66,14 @@
         android:layout_alignStart="@+id/myRoutesButton"
         android:layout_marginTop="48dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Jump to Bus"
+        android:id="@+id/tempBusButton"
+        android:layout_below="@+id/searchRouteButton"
+        android:layout_centerHorizontal="true" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
