--- a/BusHawk/app/src/main/res/layout/activity_bus_view.xml
+++ b/BusHawk/app/src/main/res/layout/activity_bus_view.xml
@@ -8,6 +8,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.jjgould94.bushawk.BusView">
 
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:map="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:id="@+id/busMap"
+        tools:context="com.example.jjgould94.bushawk.BusView"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_weight="0.5"/>
+    <!--
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,5 +50,5 @@
         android:id="@+id/nextStop"
         android:layout_below="@+id/nextStopText"
         android:layout_centerHorizontal="true" />
-
+    -->
 </RelativeLayout>
