--- a/BusHawk/app/src/main/res/layout/activity_main.xml
+++ b/BusHawk/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:fitsSystemWindows="true"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
-        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
+    <RelativeLayout
+        tools:context=".MainActivity"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin" >
 
-        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
-            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="My Stops"
+            android:id="@+id/myStopsButton"
+            android:onClick="openMyBus"
+            android:layout_below="@+id/universityText"
+            android:layout_alignStart="@+id/universityText"/>
 
-    </android.support.design.widget.AppBarLayout>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="My Routes"
+            android:id="@+id/myRoutesButton"
+            android:layout_alignTop="@+id/myStopsButton"
+            android:layout_alignEnd="@+id/universityText" />
 
-    <include layout="@layout/content_main" />
+        <TextClock
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textClock3"
+            android:elegantTextHeight="false"
+            android:textStyle="bold"
+            android:autoText="false"
+            android:minHeight="16dp"
+            android:layout_above="@+id/universityText"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp" />
 
-</android.support.design.widget.CoordinatorLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/BusHawk"
+            android:id="@+id/BusHawkText"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="44dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="The University of Kansas"
+            android:id="@+id/universityText"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
+
+        <SearchView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/searchByRoute"
+            android:queryHint="Search by Route"
+            android:layout_below="@+id/myStopsButton"
+            android:layout_centerHorizontal="true" />
+
+        <SearchView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/searchByStop"
+            android:queryHint="Search By Stop"
+            android:layout_below="@+id/searchByRoute"
+            android:layout_centerHorizontal="true" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Jump to Bus"
+            android:id="@+id/tempBusButton"
+            android:layout_below="@+id/searchByStop"
+            android:layout_centerHorizontal="true" />
+    <!--
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Search by Stop"
+            android:id="@+id/searchStopButton"
+            android:layout_alignTop="@+id/searchRouteButton"
+            android:layout_toLeftOf="@+id/textClock"
+            android:layout_toStartOf="@+id/textClock" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Search By Route"
+            android:id="@+id/searchRouteButton"
+            android:layout_below="@+id/myRoutesButton"
+            android:layout_alignLeft="@+id/myRoutesButton"
+            android:layout_alignStart="@+id/myRoutesButton"
+            android:layout_marginTop="48dp" />
+    -->
+    </RelativeLayout>
+</RelativeLayout>
