--- a/BusHawk/app/src/main/res/layout/activity_bus_view.xml
+++ b/BusHawk/app/src/main/res/layout/activity_bus_view.xml
@@ -10,40 +10,56 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.jjgould94.bushawk.BusView">
+    tools:context="com.example.jjgould94.bushawk.BusView"
+    android:background="@drawable/background_busview"
+    android:weightSum="1">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight=".5"
+        android:layout_height="227dp"
         android:id="@+id/busMap"
         tools:context="com.example.jjgould94.bushawk.BusView"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_weight="0.14" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_width="565dp"
+        android:layout_height="136dp"
+        android:textColor="#f6f6f9"
+        android:textSize="10pt"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/nextStopText"
         android:id="@+id/nextStopText"
         android:layout_marginTop="27dp"
         android:layout_below="@+id/routeNumber"
         android:layout_centerHorizontal="true" />
+
     <Button
-        android:layout_width="match_parent"
+        style = "@style/Base.Widget.AppCompat.Button.Borderless.Colored"
+        android:textColor="#f6f6f9"
+        android:textSize="10pt"
+        android:textAllCaps="true"
+        android:textStyle="bold"
+        android:layout_width="264dp"
         android:layout_height="wrap_content"
         android:text="@string/busViewRouteNum"
         android:id="@+id/routeNumber"
-        android:layout_below="@+id/busNumber"/>
+        android:layout_below="@+id/busNumber"
+        android:layout_gravity="center_horizontal" />
 
     <Button
-        android:layout_width="match_parent"
+        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
+        android:textColor="#f6f6f9"
+        android:textSize="10pt"
+        android:textStyle="bold"
+        android:layout_width="362dp"
         android:layout_height="wrap_content"
         android:text="@string/busViewNextStopText"
         android:id="@+id/nextStop"
-        android:layout_below="@+id/nextStopText"/>
+        android:layout_below="@+id/nextStopText"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.11" />
 
 </LinearLayout>
