--- a/BusHawk/app/src/main/res/layout/activity_bus_view.xml
+++ b/BusHawk/app/src/main/res/layout/activity_bus_view.xml
@@ -11,7 +11,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.jjgould94.bushawk.BusView"
-    android:background="@drawable/background_busview"
+
     android:weightSum="1">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
@@ -22,12 +22,12 @@
         tools:context="com.example.jjgould94.bushawk.BusView"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_alignParentEnd="true"
-        android:layout_weight="0.14" />
+        android:layout_weight="0.91" />
 
     <TextView
         android:layout_width="565dp"
         android:layout_height="136dp"
-        android:textColor="#f6f6f9"
+        android:textColor="#0000ff"
         android:textSize="10pt"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/nextStopText"
@@ -38,7 +38,7 @@
 
     <Button
         style = "@style/Base.Widget.AppCompat.Button.Borderless.Colored"
-        android:textColor="#f6f6f9"
+        android:textColor="#0000ff"
         android:textSize="10pt"
         android:textAllCaps="true"
         android:textStyle="bold"
@@ -51,15 +51,14 @@
 
     <Button
         style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
-        android:textColor="#f6f6f9"
+        android:textColor="#0000ff"
         android:textSize="10pt"
         android:textStyle="bold"
-        android:layout_width="362dp"
+        android:layout_width="243dp"
         android:layout_height="wrap_content"
         android:text="@string/busViewNextStopText"
         android:id="@+id/nextStop"
         android:layout_below="@+id/nextStopText"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.11" />
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
