Jeff's Route File
We are now able to pull route/stop points from the database and save
them into a file. We will want to move this to the main activity so
both the stop and route views will simply be able to read from the file
that is populated. Need to change both route and stop view to read from
this file instead of the XML file that was previously being used.

--- a/BusHawk/app/src/main/res/layout/activity_bus_view.xml
+++ b/BusHawk/app/src/main/res/layout/activity_bus_view.xml
@@ -45,7 +45,7 @@
         android:layout_width="264dp"
         android:layout_height="wrap_content"
         android:text="@string/busViewRouteNum"
-        android:id="@+id/routeNumber"
+        android:id="@+id/busViewRouteNum"
         android:layout_below="@+id/busNumber"
         android:layout_gravity="center_horizontal" />
 
@@ -57,7 +57,7 @@
         android:layout_width="243dp"
         android:layout_height="wrap_content"
         android:text="@string/busViewNextStopText"
-        android:id="@+id/nextStop"
+        android:id="@+id/busViewStopNum"
         android:layout_below="@+id/nextStopText"
         android:layout_gravity="center_horizontal" />
 
