--- a/BusHawk/app/src/main/res/layout/activity_bus_view.xml
+++ b/BusHawk/app/src/main/res/layout/activity_bus_view.xml
@@ -26,7 +26,7 @@
 
     <TextView
         android:layout_width="565dp"
-        android:layout_height="136dp"
+        android:layout_height="47dp"
         android:textColor="#0000ff"
         android:textSize="10pt"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -34,8 +34,15 @@
         android:id="@+id/nextStopText"
         android:layout_marginTop="27dp"
         android:layout_below="@+id/routeNumber"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical = "true"
+        />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="205dp">
 
+    </ListView>
+<!--
     <Button
         style = "@style/Base.Widget.AppCompat.Button.Borderless.Colored"
         android:textColor="#0000ff"
@@ -60,5 +67,5 @@
         android:id="@+id/busViewStopNum"
         android:layout_below="@+id/nextStopText"
         android:layout_gravity="center_horizontal" />
-
+-->
 </LinearLayout>
