--- a/BusHawk/app/src/main/res/layout-v17/activity_main.xml
+++ b/BusHawk/app/src/main/res/layout-v17/activity_main.xml
@@ -72,7 +72,7 @@
         android:textSize="6pt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Jump to Bus"
+        android:text="Buses"
         android:id="@+id/tempBusButton"
         android:background="@drawable/bus_button"
         android:layout_above="@+id/myStopsButton"
