--- a/BusHawk/app/src/main/res/layout/activity_list_selection.xml
+++ b/BusHawk/app/src/main/res/layout/activity_list_selection.xml
@@ -23,10 +23,10 @@
         android:layout_height="match_parent">
 
         <ListView
+            android:id="@+id/android:list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:choiceMode="singleChoice"
-            android:id="@+id/list" />
+            android:choiceMode="singleChoice" />
 
 
     </LinearLayout>
